# SomeClaudeThing

./: Cargo.toml  README.md  flake.nix
fastjson-derive/: Cargo.toml
fastjson-derive/src/: codegen.rs  lib.rs  parser.rs
src/: de.rs  error.rs  lib.rs  ser.rs  value.rs
temp/: enum_deserialize.rs
tests/: lib.rs
