[package]
name = "fastjson"
version = "0.1.0"
edition = "2021"
description = "A lightweight JSON serialization/deserialization library with fast compilation"
license = "MIT"

[dependencies]
thiserror = "1.0"
fastjson-derive = { path = "./fastjson-derive", version = "0.1.0" }

[workspace]
members = ["fastjson-derive"]